kubernetes/setup.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: daedalus-project-docs
---
apiVersion: v1
kind: Namespace
metadata:
  name: daedalus-project-docs-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: daedalus-project-docs-develop
